# eyesight-xml2py

./: .gitignore  Cargo.toml
color-db/: .env  Cargo.toml
color-db/db/migrations/: 20240913161859_init.sql
color-db/migrations/: 20240913161859_ldraw.sql  20240913193333_studio.sql  20240913224214_eyesight.sql
color-db/src/: eyesight.rs  ldraw.rs  main.rs  studio.rs
eyesight-xml/: Cargo.toml
eyesight-xml/src/: lib.rs  nodes.rs  schema.rs
lighting/: Cargo.toml
lighting/src/: main.rs  schema.rs
xml2py/: Cargo.toml
xml2py-macros/: Cargo.toml
xml2py-macros/src/: lib.rs
xml2py/src/: codegen.rs  distill.rs  groups.rs  header.py  lookups.rs  main.rs  nodes.rs  schema.rs
