[package]
name = "eyesight-xml"
version = "0.1.0"
edition = "2021"

[dependencies]
enum_dispatch = "0.3.13"
glam = "0.29.0"
heck = "0.5.0"
quick-xml = { version = "0.36.1", features = ["serialize", "overlapped-lists"] }
serde = "1.0.210"
serde_derive = "1.0.210"
serde_with = "3.9.0"
xml2py-macros = { path = "../xml2py-macros" }
